--- a/style.css
+++ b/style.css
@@ -59,18 +59,19 @@ input, button {
 }
 
 .wrapper {
-    margin-top: 1em;
+    margin-top: 1.25em;
     display: grid;
-    grid-gap: 2em;
+    grid-gap: 1.25em;
     grid-template-columns: repeat(3, 1fr);
 }
 .container {
     display: flex;
+    width: 100%;
     justify-content: space-around;    
 }
 
 .container img {
-    width: 29em;
+    width: 100%;
     height: 18.75em;
     object-fit: cover;
 }
